refactor: mejoras globales en seguridad, frontend y datos iniciales
- Backend (Spring Boot):
  * Corregida configuración de SecurityConfiguration para permitir a usuarios añadir/eliminar favoritos.
  * Mejorado JwtAuthenticationFilter con manejo de excepciones para tokens inválidos/expirados.
  * Actualizado UserDetailsServiceImpl para usar authorities en lugar de roles.
  * Mejorada AuthenticationServiceImpl con excepciones específicas.
  * Limpieza de pom.xml eliminando dependencias redundantes.
  * Ajustado script SQL inicial (TFG-Init-Data.sql).

- Frontend (Angular):
  * Corregida lógica de favoritos en home.component.ts y wishlist.component.ts.
  * Actualizado videogames.service.ts para alinear peticiones con la nueva seguridad.
  * Limpieza de algunos imports innecesarios